fix effect bounce in, and parallax img on mobile

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -314,13 +314,6 @@ Parallax
   width: 100%;
 }
 
-.parallax {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 #tjanster-utformar {
   background-image: url(https://images.unsplash.com/photo-1508424757105-b6d5ad9329d0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80);
 }
